# SoVerifySignature

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  valid_sha1.cpp
app/src/main/java/com/csdn/ouyangpeng/jni/: MainActivity.kt  SignatureVerificationUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
